--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -31,17 +31,17 @@
     <script src="Cesium/Cesium.js"></script>
     <script src="cordova.js"></script>
     <style>
-                        @import url(Cesium/Widgets/widgets.css);
-                        html, body, #cesiumContainer {
-                            width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-                        }
-                    .cesium-widget-credits {
-                        display: none;
-                    }
+        @import url(Cesium/Widgets/widgets.css);
+        html, body, #cesiumContainer {
+            width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
+        }
+        .cesium-widget-credits {
+            display: none;
+        }
 
-                    .cesium-viewer .cesium-widget-credits {
-                        display: none;
-                    }
+        .cesium-viewer .cesium-widget-credits {
+            display: none;
+        }
 
 
 
@@ -51,59 +51,70 @@
 <body>
 <div id="cesiumContainer"></div>
 <script>
-            var urlImage='http://{s}.tianditu.com/img_c/wmts?service=WMTS&version=1.0.0&request=GetTile&tilematrix={TileMatrix}&layer=img&style={style}&tilerow={TileRow}&tilecol={TileCol}&tilematrixset={TileMatrixSet}&format=tiles'
-            var tdtImageProvider = new Cesium.WebMapTileServiceImageryProvider({
-                                                                               url:urlImage ,
-                                                                               layer: 'img',
-                                                                               style: 'default',
-                                                                               format: 'tiles',
-                                                                               tilingScheme:new Cesium.GeographicTilingScheme(),
-                                                                               tileMatrixSetID: 'c',
-                                                                               maximumlevel: 19,
-                                                                               alpha: 1.0,
-                                                                               show: true,
-                                                                               subdomains:['t0'],
-                                                                               tileMatrixLabels:['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19']
-                                                                               });
-            var viewer = new Cesium.Viewer('cesiumContainer',{
-                                           animation: false,
-                                           timeline: false,
-                                           fullscreenButton: false,
-                                           geocoder: false,
-                                           selectionIndicator: false,
-                                           navigationInstructionsInitiallyVisible: false,
-                                           baseLayerPicker: false,
-                                           homeButton: false,
-                                           navigationHelpButton: false,
-                                           sceneModePicker: false,
-                                           infoBox: false,
-                                           shadows: true,
-                                           skyBox : false,
-                                           imageryProvider:  new Cesium.ArcGisMapServerImageryProvider({
-        url : 'http://server.arcgisonline.com/arcgis/rest/services/ESRI_Imagery_World_2D/MapServer',})
-                                           });
+    var urlImage='http://{s}.tianditu.com/img_c/wmts?service=WMTS&version=1.0.0&request=GetTile&tilematrix={TileMatrix}&layer=img&style={style}&tilerow={TileRow}&tilecol={TileCol}&tilematrixset={TileMatrixSet}&format=tiles'
+    var tdtImageProvider = new Cesium.WebMapTileServiceImageryProvider({
+        url:urlImage ,
+        layer: 'img',
+        style: 'default',
+        format: 'tiles',
+        tilingScheme:new Cesium.GeographicTilingScheme(),
+        tileMatrixSetID: 'c',
+        maximumlevel: 19,
+        alpha: 1.0,
+        show: true,
+        subdomains:['t0'],
+        tileMatrixLabels:['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19']
+    });
+    var viewer = new Cesium.Viewer('cesiumContainer',{
+        animation: false,
+        timeline: false,
+        fullscreenButton: false,
+        geocoder: false,
+        selectionIndicator: false,
+        navigationInstructionsInitiallyVisible: false,
+        baseLayerPicker: false,
+        homeButton: false,
+        navigationHelpButton: false,
+        sceneModePicker: false,
+        infoBox: false,
+        shadows: true,
+        skyBox : false,
+        imageryProvider:  new Cesium.ArcGisMapServerImageryProvider({
+            url : 'http://server.arcgisonline.com/arcgis/rest/services/ESRI_Imagery_World_2D/MapServer',})
+    });
 
-                                           var camera = viewer.scene.camera;
-                                           init();
+    var camera = viewer.scene.camera;
+    init();
 
-                                           function init(){
-                                               camera.flyTo({
-                                                            destination: Cesium.Cartesian3.fromDegrees(116.4071700000, 39.9046900000, 20000000)
-                                                            });
-                                                            viewer.scene.screenSpaceCameraController.maximumZoomDistance = 20000000;
-                                                            viewer.scene.screenSpaceCameraController.minimumZoomDistance = 20000000;
-                                           }
-        viewer.scene.globe.enableLighting =true;
-        viewer.scene.globe.lightingFadeInDistance  =45000000;
+    function init(){
+        camera.flyTo({
+            destination: Cesium.Cartesian3.fromDegrees(116.4071700000, 39.9046900000, 20000000)
+        });
+        viewer.scene.screenSpaceCameraController.maximumZoomDistance = 20000000;
+        viewer.scene.screenSpaceCameraController.minimumZoomDistance = 20000000;
+    }
+    viewer.scene.globe.enableLighting =true;
+    viewer.scene.globe.lightingFadeInDistance  =45000000;
 
-        function fly(latitude, longitude){
-            console.log(latitude);
-            console.log(longitude);
+    function fly(latitude, longitude){
+        console.log(latitude);
+        console.log(longitude);
 
-            camera.flyTo({
-                         destination: Cesium.Cartesian3.fromDegrees(longitude, latitude, 20000000)
-                         });
-        }
+        camera.flyTo({
+            destination: Cesium.Cartesian3.fromDegrees(longitude, latitude, 20000000)
+        });
+        addPoint(latitude,longitude)
+    }
+
+    function addPoint(latitude,longitude){
+        viewer.entities.add({
+            position : Cesium.Cartesian3.fromDegrees(longitude, latitude),
+            point : {
+                pixelSize : 10,
+                color : Cesium.Color.fromCssColorString('#6299ff')
+            }
+        });
+    }
 </script>
 </body>
 </html>
